@@ -9,6 +9,8 @@ Public Beta 20
 + Added hireable Wood-elven Elk Cavalry
 + Added the option to set hired NPCs' guard range to 0 in order to keep them stationed
 
+* Fast travel is now unavailable if nearby NPCs are attacking you
+* Middle-earth respawning now comes into effect even if you have a bed, given that you are at least 5000 blocks away from it
 * Changed the starting number of custom waypoints to 5
 * Fixed the Serbian translation not working
 * Fixed Dunlending Trident fishing depleting the hunger bar very quickly
